--- a/jenkinsfile
+++ b/jenkinsfile
@@ -29,8 +29,8 @@ pipeline {
             steps {
                 script 
                 {
-                 echo "Running ${params.tags} karate tests"
-                 bat "mvn test Dkarate.env=${env} -Dkarate.options=\"--tags ${tags}\""
+                 echo "Running ${params.tags} karate tests in ${params.env}"
+                 bat "mvn test Dkarate.env=${params.env} -Dkarate.options=\"--tags ${tags}\""
                 }
             }
         }
